crates/context-macro/tests/constraints/seeds_keys.fail.stderr
error: Cannot specified keys and seeds at the same time.
  --> tests/constraints/seeds_keys.fail.rs:25:9
   |
25 |     pub counter: Mut<Account<Counter>>,
   |         ^^^^^^^
